adding console.logs

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A package file for developer depenedencies when testing templates",
   "scripts": {
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
